--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "fs-extra": "^11.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "puppeteer": "^22.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -29,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "tools": "ts-node ./tools/index.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.4"
   }
 }
