--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "tools": "ts-node ./tools/index.ts",
-    "eject": "react-scripts eject"
+    "tools": "ts-node ./tools/index.ts"
   },
   "eslintConfig": {
     "extends": [
